APB-141 height consistency menu 4 content, charts using div for titles, clearing canvas with outerHMTL, app select shows names, bugfix filter apps and sum days for chart 2, box 2 with 2 color usage, login dialogue replace login title with, bugfix icon in error message, filter ADMIN SQL only in SERVER LOG, spinner renamed and list_scrollbar overrides transform css, chart 1 with app name and without app 0

--- a/apps/admin/src/secure/admin.css
+++ b/apps/admin/src/secure/admin.css
@@ -120,7 +120,10 @@
     #menu_1_content_widget1 select{
         display:inline-block;
     }
-    
+    #menu_1_row_sample{
+        margin-top:10px;
+        margin-bottom:10px;
+    }
     #box1{
         width: 49%;
         height: 200px;
@@ -298,7 +301,7 @@
         height:30px;
         display:inline-block;
     }
-    #apps_save #button_spinner{
+    #apps_save #app_spinner{
         position:unset;
         margin:0px;
         margin-top:-20px;
@@ -471,7 +474,7 @@
     }
     /*MENU 4 APP STAT*/
     #menu_4_content_widget{
-        height: 100%;
+        height: calc(100% + 10px)
     }
     #filesearch_menu4{
         font-size: 1.4em;
